# cs433_homework_programs

./: .clang-format  CMakeLists.txt  Makefile
assign1/: Assignment 1 Program Report.docx  CMakeLists.txt  Makefile  pcb.h  pcbtable.cpp  pcbtable.h  readyqueue.cpp  readyqueue.h  test1.cpp
assign2/: Assignment 2 Program Report.docx  CMakeLists.txt  Makefile  prog.cpp
assign3/: Assignment 3 Program Report.docx  CMakeLists.txt  README.md  driver_fcfs.cpp  driver_priority.cpp  driver_priority_rr.cpp  driver_rr.cpp  driver_sjf.cpp  pcb.h  scheduler.h  scheduler_fcfs.cpp  scheduler_fcfs.h  scheduler_priority.cpp  scheduler_priority.h  scheduler_priority_rr.cpp  scheduler_priority_rr.h  scheduler_rr.cpp  scheduler_rr.h  scheduler_sjf.cpp  scheduler_sjf.h
assign3/examples/fcfs/: fcfs_example.txt  fcfs_my_output.txt
assign3/examples/priority/: priority_example.txt  priority_my_output.txt
assign3/examples/priority_rr/: priority_rr_example.txt  priority_rr_my_output.txt
assign3/examples/rr/: rr_example.txt  rr_my_output.txt
assign3/examples/sjf/: sjf_example.txt  sjf_my_output.txt
assign4/: Assignment 4 Program Report.docx  CMakeLists.txt  buffer.cpp  buffer.h  main.cpp
assign5/: Assignment 5 Program Report.docx  CMakeLists.txt  fifo_replacement.cpp  fifo_replacement.h  lifo_replacement.cpp  lifo_replacement.h  lru_replacement.cpp  lru_replacement.h  main.cpp  pagetable.cpp  pagetable.h  replacement.cpp  replacement.h
