cmake_minimum_required(VERSION 3.13)  # CMake version check
project(cs433_homework_programs)      # Create project "cs433_homework_programs"
set(CMAKE_CXX_STANDARD 17)            # Enable c++17 standard

# Include each of the project directories
add_subdirectory(assign1)
add_subdirectory(assign2)
add_subdirectory(assign3)
#add_subdirectory(assign4)
#add_subdirectory(assign5)